# baratito_redis_handler

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: prod.yml
src/: main.py  settings.py
